fix: card not aligned in mobile

--- a/portal-FEN/src/common/components/Card/style.css
+++ b/portal-FEN/src/common/components/Card/style.css
@@ -10,6 +10,7 @@
   padding: 10px;
   margin-bottom: 20px;
   margin-right: 25px;
+  margin-left: 25px;
   box-shadow: 0 5px 8px rgba(0, 0, 0, 1);
 }
 
